<resources>
    <string name="app_name">ROOM</string>
    <string name="add_student">Adicionar Nota</string>
    <string name="insertEscola">Nota</string>
    <string name="insertAluno">Titulo</string>
    <string name="empty_not_saved">Não guardado</string>
    <string name="create_new">Criar novo</string>
    <string name="open">Abrir</string>
    <string name="file">Ficheiro</string>
    <string name="Save">Guardar</string>
    <string name="mostrar_todos">Mostrar Todos</string>
    <string name="apagar_tudo">Apagar Tudo</string>
    <string name="alunos_da_estg">Alunos da ESTG</string>
    <string name="escola_do_ricardo">Escola do Ricardo</string>
    <string name="apagar_o_ricardo">Apagar o Ricardo</string>
    <string name="alterar">Alterar</string>
    <string name="alterar_o_ricardo">Alterar o Ricardo</string>
    <string name="title_activity_login">Atividade de Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <string name="AdicionarPonto">Adicionar Ponto</string>
    <string name="Logout" translatable="false">Logout</string>
    <string name="Descrição">Descrição</string>
    <string name="Criar">Criar</string>
    <string name="CriarAcidente">Criar Acidente</string>
    <string name="title_activity_map_point" translatable="false">MapPoint</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="Idutilizador">Utilizador Id</string>
    <string name="Longitude" translatable="false">Longitude</string>
    <string name="Latitude" translatable="false">Latitude</string>
    <string name="Remover">Remover</string>
    <string name="Atualizar">Atualizar</string>
    <string name="Voltar">Voltar</string>
    <string name="nomeapp">Acidentes</string>
    <string name="Tipo">Tipo</string>
    <string name="FiltrarAcidentes">Filtrar por Acidentes</string>
    <string name="Apresentartodos">Apresentar todos</string>
</resources>