<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/file"
        android:title="@string/file"
        android:icon="@drawable/abc_vector_test"
        app:showAsAction="always">
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/create_new"
                android:title="@string/create_new" />
            <item android:id="@+id/open"
                android:title="@string/open" />
        </menu>
    </item>
    <item android:id="@+id/todosAlunos"
        android:title="@string/mostrar_todos"
        app:showAsAction="always">

    </item>
    <item android:id="@+id/apagartudo"
        android:title="@string/apagar_tudo"
        app:showAsAction="never">

    </item>

    <item android:id="@+id/alunosESTG"
        android:title="@string/alunos_da_estg"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/getEscolafromRicardo"
        android:title="@string/escola_do_ricardo"
        app:showAsAction="never">
    </item>

    <item android:id="@+id/apagarRicardo"
        android:title="@string/apagar_o_ricardo"
        app:showAsAction="never">
    </item>

    <item android:id="@+id/alterar"
        android:title="@string/alterar"
        app:showAsAction="never">
    </item>

    <item android:id="@+id/alterarRicardo"
        android:title="@string/alterar_o_ricardo"
        app:showAsAction="never">
    </item>

</menu>